Add JWT authentication phase
